Buổi 1: Hướng dẫn cấu trúc folder bài học

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>Nguyễn Minh Hoàng - Học lập trình tại F8</h1>
+		<h2>Danh sách bài học</h2>
+		<ol>
+			<li><a href="./Day1/index.html">Buổi 1</a></li>
+			<li><a href="./Day2/index.html">Buổi 2</a></li>
+			<li><a href="./Day3/index.html">Buổi 3</a></li>
+		</ol>
+	</body>
 </html>
