--- a/Day2/ex08.html
+++ b/Day2/ex08.html
@@ -7,5 +7,15 @@
 	</head>
 	<body>
 		<img src="./imgs/download.jpeg" alt="Ảnh 1" />
+		<!-- alt = alternactive -->
+
+		<video controls width="700" height="auto" muted autoplay>
+			<source src="./videos/k12-day2.mp4" type="video/mp4" />
+			<source src="./video/f8-intro.ogg" type="video/ogg" />
+		</video>
+
+		<audio controls width="700" autoplay>
+			<source src="./audio/k12-day2.mp3" type="audio/mp3" />
+		</audio>
 	</body>
 </html>
