--- a/Day3/index.html
+++ b/Day3/index.html
@@ -3,9 +3,34 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>CSS</title>
+		<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet" />
+
+		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+		<style>
+			/* CSS Internal */
+			h1 {
+				text-decoration: underline;
+				background-color: aqua;
+			}
+		</style>
+
+		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body>
-		<img src="../Day2/imgs/download.jpeg" alt="" />
+		<h1 style="color: yellow">CSS = Cascading Style Sheets</h1>
+		<!-- CSS Inline -->
+		<h2>Độ ưu tiên cho 3 cách viết CSS</h2>
+		<ol>
+			<li>Inline có độ ưu tiên cao nhất</li>
+			<li>External và Internal CSS, Code CSS nào viết dưới sẽ xếp chồng code CSS viết trên</li>
+		</ol>
+
+		<p id="description" class="description">Noi dung</p>
+		<a href="">F8 - Học lập trình để đi làm</a>
+		<i class="bx bx-user"></i>
+		<i class="bx bxs-user"></i>
+		<i class="bx bxl-facebook-square"></i>
 	</body>
 </html>
