--- a/Day4/project-02/index.html
+++ b/Day4/project-02/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,20 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
   <h1>Users</h1>
   <header>
     <form action="">
-      <button></button>
+      <button><i class='bx bx-search'></i></button>
       <input type="text" placeholder="Search users">
     </form>
     <nav>
@@ -31,22 +35,80 @@
     </nav>
   </header>
   <main>
-    <div class="row">
-      <div class="user-card">
-        <img src="" alt="">
-        <div class="content">
-          <h2>Lelah Nichols</h2>
-          <p>Troy, MI</p>
-          <ul class="tags">
-            <li><a href="">clothes</a></li>
-            <li><a href="">stem</a></li>
-          </ul>
-        </div>
+
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
       </div>
     </div>
-  </main>
 
-  <img src="https://picsum.photos/id/1/200/200" alt="">
-  
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="user-card">
+      <img src="https://picsum.photos/id/1/200/200" alt="">
+      <div class="content">
+        <h2>Lelah Nichols</h2>
+        <p>Troy, MI</p>
+        <ul class="tags">
+          <li><a href="">clothes</a></li>
+          <li><a href="">stem</a></li>
+        </ul>
+      </div>
+    </div>
+
+  </main>
 </body>
+
 </html>
