--- a/Day3/ex01.html
+++ b/Day3/ex01.html
@@ -5,32 +5,43 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<style>
+
+			* {
+				box-sizing: border-box;
+			}
+
 			.box {
 				background-color: aqua;
 				width: 300px;
 				height: 300px;
         font-size: 0;
 			}
-			.box-left,
-			.box-right {
-				display: inline-block;
+
+			.box-inner {
+				background-color: yellow;
+				width: 100%;
+				margin-left: 15px;
 			}
 
-			.box-left {
-				background-color: red;
-				width: 30%;
-				height: 100%;
+			.item {
+				display: inline-block;
+				background-color: orange;
+				width: 90px;
+				height: 90px;
+				margin-right: 15px;
 			}
-			.box-right {
-				background-color: green;
-				width: 70%;
-				height: 100%;
+
+			.item:last-child {
+				margin-right: 0;
 			}
+
 		</style>
 	</head>
 	<body>
 		<div class="box">
-			<div class="box-left"></div> <div class="box-right"></div>
+			<div class="item">item 1</div>
+			<div class="item">item 2</div>
+			<div class="item">item 3</div>
 		</div>
 	</body>
 </html>
