--- a/Day5/project-03/index.html
+++ b/Day5/project-03/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
   <header class="padding-left-right-120">
     <div class="logo">
@@ -27,8 +31,28 @@
   </header>
 
   <section class="banner padding-left-right-120">
-    banner
+    <div class="content">
+      <h1>Learn UI Design
+        From The Real Expert</h1>
+      <p>Stop wasting time browsing around and start learning
+        from our designers for your better career</p>
+      <a class="btn btn-banner">Get Started</a>
+    </div>
+    <div class="slides">
+      <div class="slide">
+        <img src="./imgs/teacher-1.png" alt="teacher">
+        <!-- <div class="desc">
+          Lorem, ipsum.
+        </div> -->
+      </div>
+      <!-- <button>
+        <img src="./imgs/polygon.svg" alt="">
+      </button> -->
+    </div>
   </section>
-  
+
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, rerum!</p>
+
 </body>
+
 </html>
