--- a/Day5/project-03/index.html
+++ b/Day5/project-03/index.html
@@ -51,7 +51,43 @@
     </div>
   </section>
 
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, rerum!</p>
+  <section id="teachers" class="padding-left-right-120">
+    <p>Grow Today</p>
+    <h2>Start Your Career</h2>
+    <div class="teachers">
+      <div class="teacher">
+        <img src="./imgs/teacher-2.png" alt="">
+        <div class="content">
+          <h3>Aisyah</h3>
+          <p class="desc">I teach how to start UX</p>
+        </div>
+      </div>
+      
+      <div class="teacher">
+        <img src="./imgs/teacher-2.png" alt="">
+        <div class="content">
+          <h3>Aisyah</h3>
+          <p class="desc">I teach how to start UX</p>
+        </div>
+      </div>
+  
+      <div class="teacher">
+        <img src="./imgs/teacher-2.png" alt="">
+        <div class="content">
+          <h3>Aisyah</h3>
+          <p class="desc">I teach how to start UX</p>
+        </div>
+      </div>
+
+      <div class="teacher">
+        <img src="./imgs/teacher-2.png" alt="">
+        <div class="content">
+          <h3>Aisyah</h3>
+          <p class="desc">I teach how to start UX</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 
