--- a/Day6/project-04/index.html
+++ b/Day6/project-04/index.html
@@ -11,17 +11,17 @@
 		<section id="about">
 			<div class="about-inner">
 				<div class="article">
-					<div class="article-content">content</div>
+					<div class="article-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magnam.</div>
 					<img src="./assets/imgs/coffee-02.jpg" alt="" />
 				</div>
 
 				<div class="article">
-					<div class="article-content">content</div>
+					<div class="article-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magnam.</div>
 					<img src="./assets/imgs/coffee-02.jpg" alt="" />
 				</div>
 
 				<div class="article">
-					<div class="article-content">content</div>
+					<div class="article-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magnam.</div>
 					<img src="./assets/imgs/coffee-02.jpg" alt="" />
 				</div>
 			</div>
