--- a/Day8/project-05/index.html
+++ b/Day8/project-05/index.html
@@ -12,55 +12,93 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/grid.css" />
 		<link rel="stylesheet" href="./assets/css/main.css" />
 	</head>
 	<body>
-		<header>Header</header>
-		<section id="hero">
-			<div class="container d-flex justify-between align-center">
-				<div class="left-content">
-					<img class="course-avatar" src="./assets/imgs/banner-guy.jpeg" alt="banner-guy" />
-					<ul class="courses-list">
-						<li class="course-item">
-							<img class="course-icon" src="./assets/imgs/icon-uiux-design.svg" alt="" />
-							<div class="course-infor">
-								<p>20 courses</p>
-								<p>UI/UX Design</p>
-							</div>
-						</li>
-
-						<li class="course-item">
-							<img class="course-icon" src="./assets/imgs/icon-developer.svg" alt="" />
-							<div class="course-infor">
-								<p>20 courses</p>
-								<p>UI/UX Design</p>
-							</div>
-						</li>
-
-						<li class="course-item">
-							<img class="course-icon" src="./assets/imgs/icon-maketing.svg" alt="" />
-							<div class="course-infor">
-								<p>20 courses</p>
-								<p>UI/UX Design</p>
-							</div>
-						</li>
+		<header>
+			<div class="container header__inner d-flex justify-between align-center">
+				<a href="#" class="logo">Lesson<span class="yellow">.</span></a>
+				<nav>
+					<ul class="nav__inner">
+						<li><a class="nav-item" href="#">Home</a></li>
+						<li><a class="nav-item" href="#">Courses</a></li>
+						<li><a href="#">Pricing</a></li>
+						<li><a class="nav-item" href="#">Reviews</a></li>
+						<li><a class="btn btn--medium" href="/signin">Sign In</a></li>
 					</ul>
-				</div>
-				<div class="right-content">
-					<h1>Learn without limits and spread knowledge.</h1>
-					<p>
-						Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class
-						universities and companies.
-					</p>
-					<div class="btn-group">
-						<a href="" class="btn">See Courses</a>
-						<a href="">
-							<img src="./assets/imgs/icon-play.svg" alt="" />
-						</a>
-						<span>Watch Video</span>
-					</div>
-				</div>
+				</nav>
 			</div>
-		</section>
+		</header>
+		<main>
+			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, quo optio quas illo modi, maiores hic praesentium
+			libero, exercitationem laborum dolore necessitatibus repudiandae iure. Dolor repellendus rerum laudantium
+			asperiores ab magnam necessitatibus consequatur placeat a. Repellendus magni debitis perferendis ullam nesciunt
+			animi. Rem et sit in quisquam! Corporis minima quia eveniet qui? Ea illum nihil, explicabo molestias, fugiat minus
+			mollitia expedita sapiente doloremque voluptates nulla? Ut dolores id expedita praesentium officia, nostrum fugit!
+			Officia eaque distinctio aliquam rerum quis pariatur architecto impedit repellendus, blanditiis dolore, provident,
+			voluptates officiis reiciendis quo labore dolor! Distinctio nobis fugit nesciunt assumenda eius sint adipisci
+			earum deserunt modi accusantium similique molestias doloremque dolorem cupiditate tenetur, officia quaerat!
+			Doloribus commodi minima porro voluptas unde. Optio tempora, doloremque quas reprehenderit nulla id alias libero
+			explicabo tenetur voluptatibus eius eveniet velit repellendus soluta aspernatur facilis voluptate adipisci unde
+			fugit maiores nam. Expedita vitae ipsa dicta veritatis recusandae, cum provident quo atque ipsum, ducimus maxime,
+			error harum officiis illo iure quos eligendi aliquam doloribus? Velit accusantium reiciendis esse nesciunt rerum
+			excepturi qui blanditiis, eos sed accusamus quam architecto quae, saepe animi ratione hic sequi delectus in, quis
+			ullam? Facilis id tempore nostrum unde porro quae dolores sit ipsum officiis enim vitae voluptas non consequatur
+			doloremque dolorem beatae atque autem perferendis perspiciatis assumenda, nisi a sint. Veritatis debitis,
+			voluptatem enim error libero neque dolorem tenetur commodi asperiores consequatur architecto natus ratione quia
+			doloribus reiciendis temporibus pariatur? Inventore possimus consequatur soluta cumque, eius dolores esse nihil
+			quidem provident ducimus. Illum qui quos quia. Consequatur dolores sequi voluptatum soluta quas enim minima
+			delectus cumque impedit, consectetur odit? Voluptatem repellendus, blanditiis eligendi ipsa culpa vero labore
+			iusto ab soluta rerum obcaecati eius cum aut sunt earum fugit, optio ex. Totam incidunt modi explicabo excepturi.
+			Quod amet modi in provident, eos praesentium id. Cum, aperiam totam impedit ut ullam nostrum libero qui accusamus
+			eius repellat neque cumque recusandae expedita odit? Eos quo, reiciendis, doloremque voluptatum totam sequi ipsum
+			perspiciatis esse obcaecati quae sapiente officiis maiores consequatur, amet praesentium voluptates beatae dolor
+			adipisci. Ipsum dicta veniam incidunt nihil earum inventore dolor fuga unde. Magnam ratione incidunt quae, tenetur
+			laborum vel, nisi sunt dolorum eius doloribus rem quas facere possimus. Illum molestiae perspiciatis tempora
+			excepturi voluptate tenetur inventore ullam fugiat! Nihil error autem quis vero quia voluptatem quod assumenda?
+			Quas nam aliquam aut modi quia eius id libero molestiae magnam natus porro iste cumque laudantium, unde
+			perferendis quidem placeat distinctio voluptate dolor quaerat vitae! Iste eligendi pariatur obcaecati velit
+			placeat, suscipit molestias nam explicabo corporis provident, eius qui accusamus, doloribus veniam est
+			reprehenderit ipsam laudantium ipsum consectetur nulla. Enim quam veritatis ex eaque cumque odit eius sequi.
+			Voluptate, veritatis, quod laboriosam unde numquam harum qui porro praesentium sequi impedit quibusdam minus
+			adipisci tempora natus, eveniet dignissimos quis officiis illum error quae voluptates delectus voluptatibus sint!
+			Blanditiis odit quisquam distinctio maxime culpa inventore. Praesentium quam quos exercitationem commodi doloribus
+			optio facilis excepturi in reiciendis doloremque, nemo ducimus earum inventore ullam laboriosam dolorem eos. Id
+			quis a nemo praesentium maiores debitis voluptas totam rem modi vitae nostrum provident, fugiat itaque atque culpa
+			aliquam unde maxime ullam tempore, possimus quisquam natus laudantium eius deserunt. Minus, corporis reiciendis
+			nulla optio ab perspiciatis ad odio voluptatibus sequi et, repellendus repellat nihil laborum. Laboriosam eaque
+			nobis aliquid rem eos debitis maiores officiis numquam est, inventore tempora facilis quaerat, dicta voluptates,
+			possimus eligendi quod non cum fugit eum voluptas ut beatae necessitatibus illo? Officia in ab vel assumenda
+			expedita quis similique temporibus. Praesentium provident quasi quas atque odit corrupti ab aliquid voluptas,
+			excepturi explicabo dolor, officia eveniet ratione veritatis a repellat est quos earum. Recusandae esse qui earum
+			architecto laboriosam veritatis, vel voluptatem tenetur, officiis sed minus alias. Voluptas, sit hic. Accusamus
+			quia, tempora nemo dignissimos similique necessitatibus ut magni at quaerat earum suscipit excepturi sed
+			voluptates quos perferendis culpa magnam fugit id in! Nostrum voluptatem quidem voluptates corrupti impedit
+			repellat ratione? Dolorem, fugiat laudantium. Aperiam impedit error aspernatur odit provident quod accusantium,
+			suscipit optio sunt commodi quam! Quasi aperiam praesentium magni exercitationem vel quod perspiciatis corporis
+			est expedita nobis dolores accusantium eligendi maiores dolore amet, ipsum sunt tenetur voluptatem! Unde sunt
+			magnam quasi exercitationem velit culpa officiis commodi quidem natus, corporis incidunt? Unde repudiandae dolores
+			architecto est fugit, doloremque nemo quasi sed dolore ex eum veniam sit, laboriosam sapiente eaque porro minima,
+			optio omnis facere aut illo qui totam! Exercitationem amet aliquid delectus natus corrupti ipsa ut animi aut
+			beatae est. Officiis quaerat neque dolores adipisci consequuntur itaque. Ab a voluptatibus dignissimos at deleniti
+			atque fugit animi libero dolorum! Adipisci cum veritatis id quasi cumque nisi eveniet fugiat commodi sit placeat,
+			quibusdam quidem nemo officiis vero iste maxime enim, facere, atque totam voluptates. Rerum earum repudiandae,
+			commodi, veniam eveniet dignissimos vitae in consequatur doloremque sit ab magnam, dolorem porro! Praesentium,
+			minima! Odit soluta in doloremque quaerat cumque ab reiciendis hic modi natus maiores ea id, animi quae expedita
+			vero culpa, minima assumenda voluptatum! Qui reprehenderit exercitationem veritatis fuga porro est, commodi, quam
+			pariatur, sed sunt dolore deserunt nobis earum repellendus tenetur? Cupiditate in ab facilis ipsum consectetur
+			voluptates placeat necessitatibus minima totam expedita, dolor sapiente iste explicabo quia recusandae maiores?
+			Eius tempora iste vero blanditiis animi ullam corporis consequatur ex, distinctio quisquam quasi beatae velit
+			exercitationem. Repellat accusamus eos nesciunt voluptatibus laboriosam hic. Ipsa deserunt voluptate consequuntur
+			voluptatem! Ad eligendi unde adipisci veniam dolorem molestias, similique, minima fuga asperiores voluptatibus
+			eaque odio sequi consectetur! Quam dolores ipsam quis modi doloribus, harum vitae obcaecati incidunt quas,
+			recusandae enim sunt cum illum aut maxime porro nemo voluptatem, aliquam aspernatur at ratione quisquam pariatur.
+			Nisi, velit. Velit dignissimos tempora pariatur obcaecati delectus inventore culpa autem distinctio sapiente
+			voluptate, libero rerum, similique optio eum possimus ex, aliquam ratione aut molestiae est tempore animi odit.
+			Explicabo iure harum, quo natus esse optio inventore temporibus aliquam quod officia nulla obcaecati praesentium?
+			Ipsa dolore amet voluptatem ratione deserunt omnis earum, ipsum molestias sapiente corrupti nemo sed facilis
+			necessitatibus ad, eum est minima illum in eos id! Quidem, hic obcaecati.
+		</main>
 	</body>
 </html>
