--- a/Day13/ex07.html
+++ b/Day13/ex07.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-
 		<style>
 			.container {
 				width: 300px;
@@ -13,23 +12,24 @@
 				position: relative;
 			}
 
-			.item {
-				width: 50px;
-				height: 50px;
-				background-color: greenyellow;
-				/* transform: translateX(50px) translateY(50px); */
-				/* transform: translate(100%, 100%); */
+			.container:hover .box {
+				top: 100%;
+				left: 100%;
+			}
+			.box {
+				width: 20px;
+				height: 20px;
+				background-color: blue;
+				transition: top cubic-bezier(0, 0.51, 0.97, 0.43) 5s 0s, left cubic-bezier(0, 0.51, 0.97, 0.43) 5s 0s;
 				position: absolute;
-				right: 0;
-				top: 50%;
-				transform: translate(50%, -50%);
-				border-radius: 50%;
+				top: 0;
+				left: 0;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="container">
-			<div class="item">Item</div>
+			<div class="box"></div>
 		</div>
 	</body>
 </html>
