--- a/Day15/ex05.html
+++ b/Day15/ex05.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+
 		<style>
 			* {
 				box-sizing: border-box;
@@ -17,25 +18,25 @@
 			}
 
 			.section-1__inner {
-				display: flex;
-				flex-wrap: wrap;
+				display: grid;
+				grid-template-columns: repeat(4, 1fr);
+				grid-auto-rows: minmax(100px, auto);
 				column-gap: 30px;
-				row-gap: 40px;
-				justify-content: space-between;
+				row-gap: 60px;
 			}
 
 			.item {
 				border: 2px dashed orange;
-				flex-basis: 300px;
 				min-height: 200px;
 			}
 			@media (max-width: 1199.98px) {
 				.container {
 					width: 960px;
 				}
-
-				h1 {
-					font-size: 48px;
+				.section-1__inner {
+					grid-template-columns: repeat(3, 1fr);
+					column-gap: 20px;
+					row-gap: 40px;
 				}
 			}
 
@@ -43,15 +44,19 @@
 				.container {
 					width: 720px;
 				}
+				.section-1__inner {
+					grid-template-columns: repeat(2, 1fr);
+					column-gap: 16px;
+					row-gap: 20px;
+				}
 			}
 
 			@media (max-width: 767.98px) {
 				.container {
 					width: 540px;
 				}
-
 				.section-1__inner {
-					justify-content: center;
+					grid-template-columns: 1fr;
 				}
 			}
 
