--- a/Day16/ex01.html
+++ b/Day16/ex01.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container text-center">
-			<div class="row gx-2">
+			<div class="row gx-2 gy-3">
 				<div class="col-4">
 					<div class="item">Column</div>
 				</div>
