--- a/Day16/ex01.html
+++ b/Day16/ex01.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container text-center">
-			<div class="row gx-2 gy-3">
+			<div class="row gx-5 gy-5">
 				<div class="col-4">
 					<div class="item">Column</div>
 				</div>
@@ -16,14 +16,17 @@
 					<div class="item">Column</div>
 				</div>
 				<div class="col-4">
-					<div class="item">Column</div>
+					<div class="product-item">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem ducimus, odio aspernatur quibusdam et
+						officia omnis porro perspiciatis repellat inventore nam nihil magnam ratione sunt vero iste nulla quas.
+					</div>
 				</div>
 
 				<div class="col-4">
 					<div class="item">Column</div>
 				</div>
 
-				<div class="col-4">
+				<div class="col-4 offset-4">
 					<div class="item">Column</div>
 				</div>
 
