Day 22: ES6 với Object

--- a/Day22/ex01.html
+++ b/Day22/ex01.html
@@ -8,6 +8,9 @@
 	<body>
 		<h1>Object cơ bản</h1>
 		<!-- <script src="./ex01.js"></script> -->
-		<script src="./ex02.js"></script>
+		<!-- <script src="./ex02.js"></script> -->
+		<!-- <script src="./ex03.js"></script> -->
+		<!-- <script src="./ex04.js"></script> -->
+		<script src="./ex05.js"></script>
 	</body>
 </html>
