--- a/Day25/index.html
+++ b/Day25/index.html
@@ -12,6 +12,7 @@
 		<!-- <script src="./ex04.js"></script> -->
 		<!-- <script src="./ex05.js"></script> -->
 		<!-- <script src="./ex08.js"></script> -->
-		<script src="./ex09.js"></script>
+		<!-- <script src="./ex09.js"></script> -->
+		<script src="./ex10.js"></script>
 	</body>
 </html>
