--- a/Day27/index.html
+++ b/Day27/index.html
@@ -6,12 +6,9 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>String</h1>
+		<h1>Number</h1>
 		<!-- <script src="./ex01.js"></script> -->
 		<!-- <script src="./ex02.js"></script> -->
-		<!-- <script src="./ex03.js"></script> -->
-		<!-- <script src="./ex04.js"></script> -->
-		<!-- <script src="./ex05.js"></script> -->
-		<script src="./ex06.js"></script>
+		<script src="./ex03.js"></script>
 	</body>
 </html>
