--- a/Day27/index.html
+++ b/Day27/index.html
@@ -9,6 +9,7 @@
 		<h1>Number</h1>
 		<!-- <script src="./ex01.js"></script> -->
 		<!-- <script src="./ex02.js"></script> -->
-		<script src="./ex03.js"></script>
+		<!-- <script src="./ex03.js"></script> -->
+		<script src="./ex04.js"></script>
 	</body>
 </html>
