--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
 		<h1>Nguyễn Minh Hoàng - Học lập trình tại F8</h1>
 		<h2>Danh sách bài học</h2>
 		<ol>
-			<li><a href="./Day1/index.html">Buổi 1</a></li>
-			<li><a href="./Day2/index.html">Buổi 2</a></li>
-			<li><a href="./Day3/index.html">Buổi 3</a></li>
+			<li><a href="./HTML/Day01/index.html">Buổi 1</a></li>
+			<li><a href="./HTML/Day02/index.html">Buổi 2</a></li>
+			<li><a href="./HTML/Day03/index.html">Buổi 3</a></li>
+			<li><a href="./HTML/Day04/index.html">Buổi 4</a></li>
+			<li><a href="./HTML/Day05/index.html">Buổi 5</a></li>
+			<li><a href="./HTML/Day06/index.html">Buổi 6</a></li>
+			<li><a href="./HTML/Day07/index.html">Buổi 7</a></li>
+			<li><a href="./HTML/Day08/index.html">Buổi 8</a></li>
+			<li><a href="./HTML/Day09/index.html">Buổi 9</a></li>
+			<li><a href="./HTML/Day10/index.html">Buổi 10</a></li>
+			<li><a href="./HTML/Day11/index.html">Buổi 11</a></li>
+			<li><a href="./HTML/Day12/index.html">Buổi 12</a></li>
+			<li><a href="./HTML/Day13/index.html">Buổi 13</a></li>
+			<li><a href="./HTML/Day14/index.html">Buổi 14</a></li>
+			<li><a href="./HTML/Day15/index.html">Buổi 15</a></li>
+			<li><a href="./HTML/Day16/index.html">Buổi 16</a></li>
+			<li><a href="./Day17/index.html">Buổi 17</a></li>
+			<li><a href="./Day18/index.html">Buổi 18</a></li>
+			<li><a href="./Day19/index.html">Buổi 19</a></li>
+			<li><a href="./Day20/index.html">Buổi 20</a></li>
 		</ol>
 	</body>
 </html>
