--- a/Day29/index.html
+++ b/Day29/index.html
@@ -6,40 +6,15 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>DOM</h1>
-		<section>
-			<h2 id="title-1" class="title">DOM la gi?</h2>
-		</section>
-
-		<section>
-			<h2 id="title-1" class="title">DOM la gi?</h2>
-		</section>
-
-		<section>
-			<h2 id="title-1" class="title">DOM la gi?</h2>
-		</section>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quis?</p>
-		<div>
-			<div>
-				<div>
-					<p id="example" class="example-class">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit nam ullam neque, rem possimus nisi aliquam
-						beatae magni rerum tempore!
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<section>
-			<h2 id="title-1" class="title">DOM la gi?</h2>
-			<ol class="list list-1 list-2" id="list-jobs">
-				sdsds
-				<li>item 1</li>
-				<li>item 2</li>
-				<li>item 3</li>
-				<li>item 4</li>
-			</ol>
-		</section>
-		<script src="./ex01.js"></script>
+		<!-- <script type="module" src="./ex01.js"></script> -->
+		<!-- <script type="module" src="./ex02.js"></script> -->
+		<!-- <script type="module" src="./ex03.js"></script> -->
+		<!-- <script type="module" src="./features/a.js"></script> -->
+		<!-- <script type="module" src="./features/b.js"></script> -->
+		<!-- <script type="module" src="./features/c.js"></script> -->
+		<!-- <script type="module" src="./features/index.js"></script> -->
+		<!-- <script type="module" src="./ex04.js"></script> -->
+		<!-- <script type="module" src="./ex05.js"></script> -->
+		<script src="./ex06.js"></script>
 	</body>
 </html>
